style: fix error message hidden by input

--- a/frontend/src/assets/styles/_mixins.scss
+++ b/frontend/src/assets/styles/_mixins.scss
@@ -155,7 +155,7 @@
   background-color: $grey30;
   text-align: center;
   cursor: pointer;
-  height: 100%;
+  height: 200px;
 
   input {
     display: none;
